# ai-codebase-onboarding-agent

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/app/: chat.py  chunking.py  config.py  embeddings.py  github.py  indexing.py  ingestion.py  main.py  models.py  qa.py  vector_store.py
backend/codebase_onboarding_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_chat.py  test_chunking.py  test_embeddings.py  test_github.py  test_indexing.py  test_ingestion.py  test_main.py  test_models.py  test_qa.py  test_vector_store.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  api.ts  types.ts
